resolve merge conflicts

--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -17,32 +17,17 @@
   <main role="main" class="govuk-o-main-wrapper">
 
     <a class="govuk-c-back-link" href="declared-shares">Back</a>
-    <p class="govuk-body"></p>
+
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h1>Provisional result</h1>
-        <br>
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
-          <div class="govuk-c-panel__body">
-            You client will have to make a contribution of
-          </div>
-          <br>
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffcc00">
           <h2 class="govuk-c-panel__title">
-            £255.00 a month
-          </h2>
-          <div class="govuk-c-panel__body">
-            for 6 months, or a single payment of
-          </div>
-          <br>
-          <h2 class="govuk-c-panel__title">
-            £1275.00
+            Means assessment result
+          </br>
+          Provisional: pass
           </h2>
         </div>
-
-        <p class="govuk-body">
-          The legal aid contributions are based on the following information.
-        </p>
 
         <h3 class="govuk-heading">
           Breakdown of provisional result
@@ -52,7 +37,6 @@
 
           <div>
             <table class="govuk-c-table--two-thirds" style="border-spacing:0">
-
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Capital</th>
@@ -61,7 +45,6 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-<<<<<<< HEAD
                <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Main dwelling</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
@@ -95,20 +78,11 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Investments</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-=======
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Bank accounts</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£470.00</td>
->>>>>>> 255544353c2e2fe4b4cbf990b246578c992f9512
                   <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
-<<<<<<< HEAD
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-=======
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
->>>>>>> 255544353c2e2fe4b4cbf990b246578c992f9512
                   <td class="govuk-c-table__cell" style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
@@ -132,7 +106,6 @@
 
           <div>
             <table class="govuk-c-table--two-thirds" style="border-spacing:0">
-
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Gross income</th>
@@ -144,24 +117,19 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
-<<<<<<< HEAD
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-=======
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
->>>>>>> 255544353c2e2fe4b4cbf990b246578c992f9512
                 </tr>
-  <!--              <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Total benefits</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr> -->
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                </tr>
+               <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Financial support</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-<<<<<<< HEAD
                   <td class="govuk-c-table__cell">Total other income</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
@@ -172,8 +140,6 @@
                   <td class="govuk-c-table__cell" style="border-width:thick;"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-=======
->>>>>>> 255544353c2e2fe4b4cbf990b246578c992f9512
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,495.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
@@ -189,7 +155,6 @@
 
           <div>
             <table class="govuk-c-table--two-thirds" style="border-spacing:0">
-
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="300" style="border-width:thick;">Disposable income</th>
@@ -198,15 +163,40 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Childcare</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
+               <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">PAYE + NI</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Rent</td>
+                  <td class="govuk-c-table__cell">Employment expenses</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Child care</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                </tr>
+               <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Dependants allowance</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Maintenance out</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell">Housing costs</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                </tr>
+               <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" style="border-width:thick;">Criminal legal aid</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
