--- a/app/views/solicitor/benefits-kind.html
+++ b/app/views/solicitor/benefits-kind.html
@@ -19,47 +19,33 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-<<<<<<< HEAD
-      <a class="govuk-c-back-link" href="review-outgoings">Back</a>
-=======
       <a class="govuk-c-back-link" href="paid-cash">Back</a>
       <p class="govuk-body"></p>
->>>>>>> 255544353c2e2fe4b4cbf990b246578c992f9512
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-<<<<<<< HEAD
-          <h2 class="govuk-heading-xl">The client has not declared any benefits in kind, is that right?</h2>
-
-          <form action="check-answers" method="post">
-=======
           <h2 class="govuk-heading-xl">Your client said they do not receive any benefits in kind</h2>
 
-          <p class="govuk-body">Your client does not get a company car, travel card or health insurance from their employer.</p>
+          <p class="govuk-body">Your client does not get a company car, travel card or health insurance from their employer. Is this correct?</p>
 
-          <form action="/solicitor/benefits-kind" method="post">
->>>>>>> 255544353c2e2fe4b4cbf990b246578c992f9512
+          <form action="/solicitor/check-answers" method="post">
 
             <div class="govuk-c-radios">
               </br>
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="cashYes" name="cashPay" type="radio" value="cashyes" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="cashYes">Yes</label>
+                  <input class="govuk-c-radios__input" id="bikYes" name="bik" type="radio" value="yes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="bikYes">Yes</label>
                 </div>
                 <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="cashNo" name="cashPay" type="radio" value="cashno">
-                  <label class="govuk-c-label govuk-c-radios__label" for="cashNo">No</label>
+                  <input class="govuk-c-radios__input" id="bikNo" name="bik" type="radio" value="no">
+                  <label class="govuk-c-label govuk-c-radios__label" for="bikNo">No</label>
                 </div>
               </fieldset>
             </div>
 
-<<<<<<< HEAD
             <input class="govuk-c-button" type="submit" value="Continue">
-=======
-            <a class="govuk-c-button govuk-c-button" href="check-answers" role="button">Continue</a>
->>>>>>> 255544353c2e2fe4b4cbf990b246578c992f9512
 
           </form>
 
