--- a/app/views/solicitor/application-task-list-with-means-merit.html
+++ b/app/views/solicitor/application-task-list-with-means-merit.html
@@ -451,14 +451,10 @@
         </h2>
 
         <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
-          <ul class="govuk-list govuk-list--bullet" style="color: #b10e1e" ;>
-            <li>
-              <a><b>Until all the sections are complete, you will not be able to submit this application.</b></a>
-            </li>
-            <br>
-            <li>
-              <a><b>You can complete it in whichever order suits you</b></a>
-            </li>
+          <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
+            <li>Until all the sections are complete, you will not be able to submit this application.</li>
+            </br>
+            <li>You can complete the sections in whichever order suits you.</li>
           </ul>
         </div>
 
