--- a/app/views/solicitor/case-dashboard.html
+++ b/app/views/solicitor/case-dashboard.html
@@ -415,9 +415,9 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="start">Back</a>
-  <p class="govuk-body"></p>
+
       <div>
- 
+
         <h2 class="govuk-heading-xl">Continue an application</h2>
 
         <p class="govuk-body">
@@ -428,7 +428,7 @@
         <h2 class="task-list-section">
             <span class="task-list-section-number"></span>
         </h2>
-        <table class="govuk-c-table--two-thirds" style="border-collapse: collapse;">
+        <table class="govuk-c-table" style="border-collapse: collapse;">
 
           <thead class="govuk-c-table__head">
             <tr class="govuk-c-table__row">
@@ -446,7 +446,7 @@
               <td class="govuk-c-table__cell"><a class="govuk-link" href="granted-access"><strong class="task-completed" id="other-1-completed" style="background-color:#00823b">Ready to progress</strong></a></td>
             </tr>
             <tr class="task-list-item">
-              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">Bob Dylan</a></td>
+              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">Jane Dole</a></td>
               <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">08/04/2018</a></td>
               <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">2018/LAA/5kspihsl</a></td>
               <td class="govuk-c-table__cell">&nbsp</td>
