--- a/app/views/solicitor/document-upload-property.html
+++ b/app/views/solicitor/document-upload-property.html
@@ -27,8 +27,9 @@
           <h2 class="govuk-heading-xl">Document upload for property</h2>
 
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="file-upload-1">
-              Upload a file
+              <b>Select a file to upload as evidence</b>
             </label>
+            </br>
             <input type="file" id="file-upload-1" name="file-upload-1" class="govuk-c-file-upload">
           </div>
 
