--- a/app/views/solicitor/document-upload.html
+++ b/app/views/solicitor/document-upload.html
@@ -26,14 +26,15 @@
 
           <h2 class="govuk-heading-xl">Document upload for stocks and shares</h2>
 
-            <div class="govuk-o-form-group"><label class="govuk-c-label" for="file-upload-1">
-              Upload a file
+          <div class="govuk-o-form-group"><label class="govuk-c-label" for="file-upload-1">
+                    <b>Select a file to upload as evidence</b>
             </label>
+            </br>
             <input type="file" id="file-upload-1" name="file-upload-1" class="govuk-c-file-upload">
-            </div>
+          </div>
 
 
-            <a class="govuk-c-button govuk-c-button" href="document-upload-stocks" role="button">Continue</a>
+          <a class="govuk-c-button govuk-c-button" href="document-upload-stocks" role="button">Continue</a>
 
           </form>
 
