--- a/app/views/solicitor/application-task-list.html
+++ b/app/views/solicitor/application-task-list.html
@@ -450,19 +450,11 @@
           Apply for legal aid
         </h2>
 
-        <p class="govuk-body">
-          You must complete each section before you can submit the application.
-        </p>
-
-        <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert" hidden="">
-          <ul class="govuk-list govuk-list--bullet" style = "color: #b10e1e";>
-            <li>
-              <a><b>Until all the sections are complete, you will not be able to submit this application.</b></a>
-            </li>
-            <br>
-            <li>
-              <a><b>You can complete it in whichever order suits you</b></a>
-            </li>
+        <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
+          <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
+            <li>Until all the sections are complete, you will not be able to submit this application.</li>
+            </br>
+            <li>You can complete the sections in whichever order suits you.</li>
           </ul>
         </div>
 
@@ -475,7 +467,7 @@
                         Background information
                 </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
