--- a/app/views/solicitor/document-upload-property-review.html
+++ b/app/views/solicitor/document-upload-property-review.html
@@ -47,8 +47,8 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">mortgage-statement-april-2018.pdf</td>
-                  <td class="govuk-c-table__cell">pdf</td>
-                  <td class="govuk-c-table__cell">Mortgage Statement</td>
+                  <td class="govuk-c-table__cell">PDF</td>
+                  <td class="govuk-c-table__cell">Mortgage statement</td>
                   <td class="govuk-c-table__cell">15/05/2018</td>
                   <td class="govuk-c-table__cell"><a href="">Remove</a></td>
                 </tr>
