--- a/app/views/solicitor/document-upload-stocks.html
+++ b/app/views/solicitor/document-upload-stocks.html
@@ -46,7 +46,7 @@
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Stock-Certificate.pdf</td>
-                  <td class="govuk-c-table__cell">pdf</td>
+                  <td class="govuk-c-table__cell">PDF</td>
                   <td class="govuk-c-table__cell govuk-c-table__header--numeric">Stock certificate</td>
                   <td class="govuk-c-table__cell">15/05/2018</td>
                   <td class="govuk-c-table__cell"><a href="">Remove</a></td>
