--- a/app/views/solicitor/document-upload-type-property.html
+++ b/app/views/solicitor/document-upload-type-property.html
@@ -30,9 +30,10 @@
             Select from the drop down what kind of evidence you are submitting
           </label>
             <select class="govuk-c-select" id="select-1" name="select-1">
-            <option value="1">Banking information</option>
-            <option value="2" selected>Stocks and shares</option>
-            <option value="3">Property interest</option>
+            <option value="1">Mortgage statement</option>
+            <option value="2">Surveyor's valuation</option>
+            <option value="3">Title deed</option>
+            <option value="4">Other</option>
           </select>
           </div>
 
