--- a/app/views/solicitor/document-upload-type.html
+++ b/app/views/solicitor/document-upload-type.html
@@ -29,15 +29,15 @@
           <div class="govuk-o-form-group"><label class="govuk-c-label" for="select-1">
             Select from the drop down what kind of evidence you are submitting
           </label>
-          <select class="govuk-c-select" id="select-1" name="select-1">
-            <option value="1">Banking information</option>
-            <option value="2" selected>Stocks and shares</option>
-            <option value="3">Property interest</option>
+            <select class="govuk-c-select" id="select-1" name="select-1">
+            <option value="1">Stock certificate</option>
+            <option value="2">Share certificate</option>
+            <option value="3">Other</option>
           </select>
           </div>
 
 
-            <a class="govuk-c-button govuk-c-button" href="document-upload" role="button">Continue</a>
+          <a class="govuk-c-button govuk-c-button" href="document-upload" role="button">Continue</a>
 
           </form>
 
