--- a/app/views/solicitor/granted-access.html
+++ b/app/views/solicitor/granted-access.html
@@ -19,7 +19,7 @@
   <main role="main" class="govuk-o-main-wrapper">
 
     <a class="govuk-c-back-link" href="case-dashboard">Back</a>
-  <p class="govuk-body"></p>
+    <p class="govuk-body"></p>
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
@@ -30,11 +30,11 @@
         <p class="govuk-body">Your client gave us access to 3 months of transactions from:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li><a href="#">3 bank accounts</a></li>
-          <li><a href="#">1 ISA account</a></li>
+          <li><a href="client-accounts">2 bank accounts</a></li>
+          <li><a href="client-accounts">1 ISA account</a></li>
         </ul>
 
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="/solicitor/application-task-list" role="button">Next</a>
+        <a class="govuk-c-button govuk-c-button" href="/solicitor/application-task-list" role="button">Continue</a>
 
       </div>
 
