--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -25,7 +25,8 @@
           <h2 class="govuk-c-panel__title">
             Means assessment result
           </br>
-          Provisional: pass
+        </br>
+          Provisional: Pass
           </h2>
         </div>
 
