--- a/app/views/solicitor/review-outgoings.html
+++ b/app/views/solicitor/review-outgoings.html
@@ -23,21 +23,15 @@
       <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
-        <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
+        <div class="govuk-o-grid__item">
 
           <h2 class="govuk-heading-xl">
             Check your client's outgoings
           </h2>
 
-          <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert" hidden="">
-            <ul class="govuk-list govuk-list--bullet" style = "color: #b10e1e";>
-              <li>
-                <a><b>Until all the sections are complete, you will not be able to submit this application.</b></a>
-              </li>
-              <br>
-              <li>
-                <a><b>You can complete it in whichever order suits you</b></a>
-              </li>
+          <div class="govuk-c-error-summary govuk-o-grid__item--two-thirds" aria-labelledby="error-summary-title" role="alert">
+            <ul class="govuk-body" style="color: #b10e1e; font-weight:800;">
+              <li>Make sure to review what your client has declared and amend as necessary.</li>
             </ul>
           </div>
 
@@ -52,7 +46,7 @@
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Date</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Description</th>
-                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Explaination</th>
+                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Explanation</th>
                   <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Amount</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Type</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;"></th>
@@ -135,9 +129,9 @@
               </table>
               <br>
 
-            <a class="govuk-c-button govuk-c-button" href="paid-cash" role="button">Continue</a>
+              <a class="govuk-c-button govuk-c-button" href="paid-cash" role="button">Continue</a>
 
-          </div>
+            </div>
 
     </main>
     </div>
