--- a/app/views/solicitor/photo-evidence-property-mobile-confirm.html
+++ b/app/views/solicitor/photo-evidence-property-mobile-confirm.html
@@ -19,28 +19,23 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="declared-evidence-with-stocks">Back</a>
+      <a class="govuk-c-back-link" href="photo-evidence-property-mobile-number">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Please choose how you wish to submit this evidence</h2>
+          <p></p>
+          <h2 class="govuk-heading-xl">
+            We will now send a text message to
+          </h2>
 
-          <form action="property-evidence-method" method="post">
+          <h3 class="govuk-heading-m">
+            {{ data['mobile-evidence']}}  &nbsp&nbsp&nbsp&nbsp <a href="photo-evidence-property-mobile-number">Change</a>
+          <h3>
 
-            <div class="govuk-c-radios">
-              </br>
-              <fieldset class="govuk-c-fieldset">
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="file" name="propertyEvidenceMethod" type="radio" value="file" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="file">Upload a file</label>
-                </div>
-                <div class="govuk-c-radios__item">
-                  <input class="govuk-c-radios__input" id="photo" name="propertyEvidenceMethod" type="radio" value="photo">
-                  <label class="govuk-c-label govuk-c-radios__label" for="photo">Take a photo</label>
-                </div>
-              </fieldset>
-            </div>
+</br>
+</br>
+          <form class="form" action="photo-evidence-property-mobile-sending" method="post">
 
             <input class="govuk-c-button" type="submit" value="Continue">
 
