fix minor things

--- a/app/views/citizen-truelayer/other-income.html
+++ b/app/views/citizen-truelayer/other-income.html
@@ -26,7 +26,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Did you receive any income not paid into your bank?
+              **** Did you receive any income not paid into your bank?
         </h2>
 
         <form action="/citizen-truelayer/cash" method="get">
