--- a/app/views/solicitor/basic-details-playback.html
+++ b/app/views/solicitor/basic-details-playback.html
@@ -19,7 +19,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="phone-number">Back</a>
+      <a class="govuk-c-back-link" href="email-address">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -69,38 +69,13 @@
                   </a>
                 </dd>
               </div>
-            </dl>
 
-            </br>
-
-            <h2 class="govuk-heading-l">Contact information</h2>
-            <dl class="govuk-check-your-answers cya-questions" style="width:600px">
-
-              <div>
-                <dt class="cya-question" style="width:275px">Preferred contact</dt>
-                <dd class="cya-answer">{{ data['contact-method']}}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="basic-details">
-                    Change<span class="visually-hidden">contact preferences</span>
-                  </a>
-                </dd>
-              </div>
               <div>
                 <dt class="cya-question">Email address</dt>
                 <dd class="cya-answer">{{ data['email']}}</dd>
                 <dd class="cya-change">
                   <a class="govuk-link" href="basic-details">
                     Change<span class="visually-hidden">email-address</span>
-                  </a>
-                </dd>
-              </div>
-
-              <div>
-                <dt class="cya-question">Mobile phone</dt>
-                <dd class="cya-answer">{{ data['mobile']}}</dd>
-                <dd class="cya-change">
-                  <a class="govuk-link" href="basic-details">
-                    Change<span class="visually-hidden">mobile phone number</span>
                   </a>
                 </dd>
               </div>
