--- a/app/views/solicitor/basic-details.html
+++ b/app/views/solicitor/basic-details.html
@@ -36,8 +36,8 @@
                 Including all middle names
               </span>
             </label>
-            <input class="govuk-c-input govuk-!-width-two-third" id="name" name="name" type="text" required>
-
+            <input class="govuk-c-input govuk-!-width-two-thirds" id="name" name="name" type="text" required>
+            </br>
             <input class="govuk-c-button" type="submit" value="Continue">
 
           </form>
