--- a/app/views/solicitor/enter-NI.html
+++ b/app/views/solicitor/enter-NI.html
@@ -38,7 +38,7 @@
                 For example, QQ123456C
               </span>
             </label>
-            <input class="govuk-c-input govuk-!-width-two-third" id="nino" name="nino" required>
+            <input class="govuk-c-input govuk-!-width-two-thirds" id="nino" name="nino" required>
 
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
