--- a/app/views/solicitor/online-banking.html
+++ b/app/views/solicitor/online-banking.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
+ {% extends "layout.html" %} {% block page_title %} Legal Aid Application prototype {% endblock %} {% block proposition_header %}
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block header_class %}
 <!-- blank to remove the proposition header -->
@@ -26,10 +26,10 @@
 
           <p></p>
           <h2 class="govuk-heading-xl">
-            Does your client have online banking and wish to remotely complete the legal aid assessment?  
+            Does your client have online banking and wish to remotely complete the legal aid assessment?
           </h2>
 
-          <form class="form" action="contact-applicant" method="post">
+          <form class="form" action="email-address" method="post">
 
 
             <p class="govuk-body">We will ask for temporary 1 hour access to your client's bank accounts to check their financial details.</p>
