changes following review

--- a/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
+++ b/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
@@ -439,7 +439,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="declared-evidence-with-stocks-property">Back</a>
+    <a class="govuk-c-back-link" href="declared-evidence-with-stocks">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -454,29 +454,28 @@
           <p class="govuk-c-panel__body">This application is ready to submit</p>
         </div>
 
-
         <ol class="task-list">
           <li>
-            <h2 class="task-list-section">John Smith, JJ2319388</h2>
+            <h2 class="task-list-section">John Doe, JJ2319388</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="task-list-background">
                         Background information
                 </a>
-                <a class="govuk-link" href="">
+                <a class="govuk-link" href="task-list-background">
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="task-list-basic-details">
+                        Basic details
+                </a>
+                <a class="govuk-link" href="task-list-basic-details">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Basic details
-                </a>
-                <a class="govuk-link" href="">
-                  <strong class="task-completed" id="other-1-completed">Completed</strong>
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" href="/solicitor/review-evidence">
                         Means assessment
                 </a>
                 <a class="govuk-link" href="">
@@ -492,7 +491,7 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="declared-evidence">
+                <a class="task-name" href="">
                         Evidence submission
                 </a>
                 <a class="govuk-link" href="">
