--- a/app/views/solicitor/declared-evidence-with-stocks.html
+++ b/app/views/solicitor/declared-evidence-with-stocks.html
@@ -439,7 +439,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="application-task-list-with-means-merit">Back</a>
+    <a class="govuk-c-back-link" href="other-evidence-stocks">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -477,19 +477,11 @@
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
-              <li class="task-list-item">
-                <a class="task-name" href="evidence-submit-type-property">
-                        Property interest
-                </a>
-                <a class="govuk-link" href="">
-                  <!-- <strong class="task-completed" id="other-1-completed">Completed</strong> -->
-                </a>
-              </li>
             </ul>
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="application-tasklist-with-means-merits-evidence" role="button">Continue</a>
 
       </div>
 
