--- a/app/views/solicitor/declared-evidence.html
+++ b/app/views/solicitor/declared-evidence.html
@@ -470,16 +470,8 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="evidence-submit-type">
+                <a class="task-name" href="document-upload-type">
                         Stocks and shares
-                </a>
-                <a class="govuk-link" href="">
-                  <!-- <strong class="task-completed" id="other-1-completed">Completed</strong> -->
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" href="">
-                        Property interest
                 </a>
                 <a class="govuk-link" href="">
                   <!-- <strong class="task-completed" id="other-1-completed">Completed</strong> -->
