--- a/app/views/solicitor/application-task-list-with-means.html
+++ b/app/views/solicitor/application-task-list-with-means.html
@@ -467,18 +467,18 @@
             <h2 class="task-list-section">John Doe, JJ2319388</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="task-list-background">
                         Background information
                 </a>
-                <a class="govuk-link" href="">
+                <a class="govuk-link" href="task-list-background">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="task-list-basic-details">
                         Basic details
                 </a>
-                <a class="govuk-link" href="">
+                <a class="govuk-link" href="task-list-basic-details">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
