--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -46,26 +46,6 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Main dwelling</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Additional property</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Land</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Timeshare</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£470.00</td>
@@ -77,23 +57,13 @@
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Investments</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Other savings</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell" style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Shares</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Evidence needed</a></td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;">Shares</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1000.00</td>
+                  <td class="govuk-c-table__cell" style="text-align:right;border-width:thick;"><a href="">Evidence needed</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,870.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,870.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
@@ -121,24 +91,9 @@
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Maintenance</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Financial support</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Total other income</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" style="border-width:thick;">Redundancy income</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"><a href=""></a></td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;">Maintenance</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£250.00</td>
+                  <td class="govuk-c-table__cell"style="text-align:right;border-width:thick;"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
@@ -164,40 +119,15 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">PAYE + NI</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Employment expenses</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
-                </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Child care</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Dependants allowance</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
-                </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Maintenance out</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Housing costs</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" style="border-width:thick;">Criminal legal aid</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;">Housing costs</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1200.00</td>
+                  <td class="govuk-c-table__cell" style="text-align:right; border-width:thick;"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
