Increase number of items in income and outgoing screens

--- a/app/views/citizen-truelayer/bank-success.html
+++ b/app/views/citizen-truelayer/bank-success.html
@@ -82,8 +82,8 @@
               </tbody>
             </table>
             <br>
-            <!--
-            <table class="govuk-c-table--two-thirds" style="border-spacing:0">
+
+            <!--table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
@@ -113,8 +113,8 @@
             <h2 class="govuk-heading-m">
             Your transactions
           </h2>
-
-            <thead class="govuk-c-table__head">
+            <table>
+              <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Date</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Description</th>
@@ -132,9 +132,9 @@
                 </tr>
                 {% endfor %}
               </tbody>
-            </table>
+            </table-->
             <br>
--->
+
             <a class="govuk-c-button govuk-c-button" href="obmultiple" role="button">Continue</a>
 
           </div>
