--- a/app/views/citizen-truelayer/check-evidence.html
+++ b/app/views/citizen-truelayer/check-evidence.html
@@ -42,7 +42,7 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1800.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- BACS transfer Tyreworld - £1800.00</td>
+                  <td class="govuk-c-table__cell" scope="row">- TYREWORLD BACS - £1800.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u></a>
@@ -53,7 +53,7 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- Child maintenance - £250.00</td>
+                  <td class="govuk-c-table__cell" scope="row">- CHILD MAINTENANCE - £250.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u></a>
@@ -80,7 +80,7 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- YourLandlord Letting Agents - £1200.00</td>
+                  <td class="govuk-c-table__cell" scope="row">- RENT - £1200.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u>
@@ -93,7 +93,7 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- Wiggly-tots Nursery - £600.00</td>
+                  <td class="govuk-c-table__cell" scope="row">- WIGGLY-TOTS NURSERY - £600.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u>
