--- a/app/views/citizen-truelayer/identify-income-salary-other.html
+++ b/app/views/citizen-truelayer/identify-income-salary-other.html
@@ -434,7 +434,7 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="salary-1-completed">
-                  BACS Transfer Tyreworld - £1800.00
+                  TYREWORLD BACS - £1800.00
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
@@ -450,32 +450,32 @@
           <li>
             <h2 class="task-list-section">
               <span class="task-list-section-number">2. </span>Benefits, rent and financial support</h2>
-                  <p class="govuk-body"><span class="govuk-c-label__hint">
+            <p class="govuk-body"><span class="govuk-c-label__hint">
               Add any state benefits, rent from a property or lodger, student loans, and maintenance payments
             </span></p>
-          <details>
-          <summary><span class="summary">What should you tell us about?</span></summary>
+            <details>
+              <summary><span class="summary">What should you tell us about?</span></summary>
 
-          <div class="panel panel-border-narrow">
+              <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
-              <ul style="govuk">
-                <li>- benefits such as Child Benefit Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
-                <li>- extra payments from your employer such as relocation costs</li>
-                <li>- board from a family member, lodger or tenant</li>
-                <li>- rent from another property</li>
-                <li>- maintenance payments</li>
-                <li>- student grant or loan</li>
-                <li>- financial support from a friend or family member</li>
-              </ul>
-            </p>
-          </div>
-        </details>
-        <br>
+                <p style="govuk-body">
+                  <ul style="govuk">
+                    <li>- benefits such as Child Benefit Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
+                    <li>- extra payments from your employer such as relocation costs</li>
+                    <li>- board from a family member, lodger or tenant</li>
+                    <li>- rent from another property</li>
+                    <li>- maintenance payments</li>
+                    <li>- student grant or loan</li>
+                    <li>- financial support from a friend or family member</li>
+                  </ul>
+                </p>
+              </div>
+            </details>
+            <br>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="other-completed">
-                  Child maintenance - £250.00
+                  CHILD MAINTENANCE - £250.00
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
