--- a/app/views/citizen-truelayer/identify-income-with-salary.html
+++ b/app/views/citizen-truelayer/identify-income-with-salary.html
@@ -433,7 +433,7 @@
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" aria-describedby="salary-1-completed">BACS Transfer Tyreworld - £1800.00</a>
+                <a class="task-name" aria-describedby="salary-1-completed">TYREWORLD BACS - £1800.00</a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
                 </a>
