--- a/app/views/citizen-truelayer/identify-outgoings-housing-childcare.html
+++ b/app/views/citizen-truelayer/identify-outgoings-housing-childcare.html
@@ -430,13 +430,13 @@
             <h2 class="task-list-section">
                     <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
             </h2>
-              <p class="govuk-body"><span class="govuk-c-label__hint">
+            <p class="govuk-body"><span class="govuk-c-label__hint">
               Add payments for mortgage, rent, board or lodging, and council tax bills
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
-                  MyLandlord Letting Agents - £1200.00
+                  RENT - £1200.00
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
@@ -454,12 +454,12 @@
               <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
             </h2>
             <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add childcare payments to a registered provider, maintenance payments and existing legal aid contributions 
+              Add childcare payments to a registered provider, maintenance payments and existing legal aid contributions
             </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="childcare-1-completed">
-                  Wiggly-tots Nursery - £600.00
+                  WIGGLY-TOTS NURSERY - £600.00
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
