--- a/app/views/citizen-truelayer/select-salary.html
+++ b/app/views/citizen-truelayer/select-salary.html
@@ -72,8 +72,8 @@
           </thead>
           <tbody class="govuk-c-table__body">
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">BACS Transfer Tyreworld</td>
-              <td class="govuk-c-table__cell">18 Jan 2018</td>
+              <td class="govuk-c-table__cell">TYREWORLD BACS</td>
+              <td class="govuk-c-table__cell">02 APR 2018</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1800.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
@@ -82,8 +82,18 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">Child maintenance</td>
-              <td class="govuk-c-table__cell">06 Jan 2018</td>
+              <td class="govuk-c-table__cell">CASH DEPOSIT</td>
+              <td class="govuk-c-table__cell">18 APR 2018</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£420.00</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">CHILD MAINTENANCE</td>
+              <td class="govuk-c-table__cell">02 APR 2018</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
@@ -92,8 +102,28 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">eBay Sale</td>
-              <td class="govuk-c-table__cell">24 Jan 2018</td>
+              <td class="govuk-c-table__cell">MS JANE DOE TRANSFER</td>
+              <td class="govuk-c-table__cell">11 APR 2018</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£130.00</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
+              <td class="govuk-c-table__cell">19 APR 2018</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£30.00</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">PAYPAL WWW.EBAY.COM</td>
+              <td class="govuk-c-table__cell">05 APR 2018</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£27.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
@@ -102,9 +132,29 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">Money from friend</td>
-              <td class="govuk-c-table__cell">18 Jan 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£15.00</td>
+              <td class="govuk-c-table__cell">MS JANE DOE TRANSFER</td>
+              <td class="govuk-c-table__cell">03 APR 2018</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£15.86</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
+              <td class="govuk-c-table__cell">30 APR 2018</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£10.00</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
+              <td class="govuk-c-table__cell">29 APR 2018</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7.50</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
                   <label><input type="radio" id='regular' name="salary"></label>
